# OpenLogi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  UI.md  devenv.nix  prek.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/openlogi-cli/: Cargo.toml
crates/openlogi-cli/src/cmd/diag/: dpi.rs  features.rs  mod.rs  smartshift.rs
crates/openlogi-core/src/: binding.rs  config.rs
crates/openlogi-gui/: Cargo.toml
crates/openlogi-gui/locales/: app.yml
crates/openlogi-gui/src/: about_window.rs  app.rs  app_assets.rs  app_menu.rs  hardware.rs  main.rs  settings_window.rs  state.rs  windows.rs
crates/openlogi-gui/src/components/: dpi_panel.rs  gesture_pad.rs  mod.rs
crates/openlogi-gui/src/mouse_model/: view.rs
crates/openlogi-gui/src/platform/: mod.rs  permissions.rs
crates/openlogi-gui/src/state/: devices.rs  dpi.rs
crates/openlogi-gui/src/watchers/: gesture.rs
crates/openlogi-gui/src/windows/: about.rs  settings.rs
crates/openlogi-hid/: Cargo.toml
crates/openlogi-hid/src/: adjustable_dpi.rs  gesture.rs  inventory.rs  lib.rs  route.rs  write.rs
crates/openlogi-hidpp/src/feature/: registry.rs
crates/openlogi-hidpp/src/feature/adjustable_dpi/: mod.rs
crates/openlogi-hook/: Cargo.toml
crates/optminus-gui/: Cargo.toml
crates/optminus-gui/src/: app.rs  main.rs  state.rs  theme.rs
crates/optminus-gui/src/components/: mod.rs
crates/optminus-gui/src/data/: mod.rs  mouse_buttons.rs
crates/optminus-gui/src/mouse_model/: mod.rs
scripts/: macos-icns.sh  package-macos.sh
