[workspace]
resolver = "3"
members = [
    "crates/optminus-core",
    "crates/optminus-hid",
    "crates/optminus-cli",
    "crates/optminus-gui",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AprilNEA/OptMinus"
authors = ["AprilNEA <dev@aprilnea.me>"]
description = "Lightweight, local-first alternative to Logitech Options+ for HID++ devices"

[workspace.dependencies]
hidpp = "0.2"
async-hid = "0.4"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time"] }
futures-lite = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
directories = "5"

# GPUI stack. The longbridge gpui-component README points at Zed's git HEAD
# because their crates.io publishes (gpui 0.2.x, gpui-component 0.5.x) lag the
# documented API. We deliberately do NOT pin `gpui` / `gpui_platform` with a
# `rev` — gpui-component itself references zed without a rev, and cargo treats
# `{ git = X, rev = Y }` and `{ git = X }` as separate source IDs, so pinning
# here ends up compiling gpui twice and producing two incompatible `App`
# types. Reproducibility comes from Cargo.lock pinning the resolved SHA;
# bump via `cargo update -p gpui` when needed.
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "196b9259b562c26be97c92f88c798bbeefa9cb3d" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
# Two pedantic lints we deliberately turn off:
#   missing_errors_doc — the public surface is small enough that the type
#     already documents the failure modes; per-function `# Errors` prose rots.
#   doc_markdown — backticking every CamelCase identifier in prose hurts
#     readability more than it helps.
missing_errors_doc = "allow"
doc_markdown = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
